tests/typing/fail/vararg_annot_fail3.rb


##% f : (Fixnum) -> Fixnum
##% f : (Fixnum, *Fixnum) -> Boolean
def f(x,*y)
end

f()
